--- a/main.css
+++ b/main.css
@@ -2,14 +2,35 @@
   background-color: blanchedalmond;
 }
 
+/*-- --*/
 .styled-table {
   border: 5px solid black;
-  width: 400;
-  height: 400;
+  width: 400px;
+  height: 400px;
   border-spacing: 10px;
 }
 
-.styled-table td{
-  border: 1px solid #000;
-  padding: 5px;
+.td-first{
+  border: 2px solid #000;
+  width: 100px;
+  height: 0px;
+}
+
+.td-first-two {
+    border: 2px solid #000;
+    width: 150px;
+    height: 50px;
+}
+
+.td-first-three {
+    border: 2px solid #000;
+    width: 150px;
+    height: 50px;
+    background-color: yellow;
+}
+
+.td-first-four {
+    border: 2px solid #000;
+    width: 25px;
+    height: 50px;
 }
