--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
   background-color: blanchedalmond;
 }
 
-/*-- --*/
+/*-- first row --*/
 .styled-table {
   border: 5px solid black;
   width: 400px;
@@ -13,7 +13,7 @@
 .td-first{
   border: 2px solid #000;
   width: 100px;
-  height: 0px;
+  height: 50px;
 }
 
 .td-first-two {
