--- a/main.css
+++ b/main.css
@@ -2,35 +2,46 @@
   background-color: blanchedalmond;
 }
 
+.td {
+    border: 2px solid black;
+}
+
 /*-- first row --*/
 .styled-table {
   border: 5px solid black;
   width: 400px;
   height: 400px;
-  border-spacing: 10px;
+  border-spacing: 0px;
 }
 
 .td-first{
   border: 2px solid #000;
-  width: 100px;
-  height: 50px;
+  height: 10%;
+  width: 20%;
 }
 
 .td-first-two {
     border: 2px solid #000;
-    width: 150px;
-    height: 50px;
+    height: 10%;
+    width: 30%;
+
 }
 
 .td-first-three {
     border: 2px solid #000;
-    width: 150px;
-    height: 50px;
+    height: 10%;
+    width: 30%;
+
     background-color: yellow;
 }
 
 .td-first-four {
     border: 2px solid #000;
-    width: 25px;
-    height: 50px;
+    height: 10%;
+    width: 5%;
 }
+.td-second {
+    border: 2px solid #000;
+    height: 20%;
+    width: 10%;
+ }
