--- a/two.vr.css
+++ b/two.vr.css
@@ -1,4 +1,19 @@
 ul {
-display: grid;
-grid-template-columns: repeat(auto-fit minmax(80px, 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+  grid-auto-rows: 80px;
+  grid-auto-flow: dense;
+}
+
+li:nth-child(4) {
+  grid-row: span 6;
+}
+
+li:nth-child(5) {
+  grid-row: span 2;
+}
+
+li:nth-child(6) {
+  grid-column: span 4;
+  grid-row: span 4;
 }
